# AdversaryFlow

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  INSTALLATION.md  INSTALLATION_REVIEW.md  LICENSE  Makefile  README.md  SECURITY.md  STORAGE.md  USAGE.md  pyproject.toml  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: ad_hoc_request.json  apt29_request.json  tabletop_request.json
reports/: apt29_scenario.md  apt29_scenario.trace.json
scripts/: check_sdist.py  demo.ps1  demo.sh  setup.ps1  setup.sh
src/adversaryflow/: __init__.py  cli.py  config.py  models.py
src/adversaryflow/export/: __init__.py  operator_pack.py
src/adversaryflow/pipeline/: dependencies.py  factuality.py  node_runner.py  orchestrator.py  prompts.py  schemas.py
src/adversaryflow/prompts/: operational_constraints.md  philosophy.md
src/adversaryflow/providers/: base.py  demo.py  openai_compatible.py  search.py
src/adversaryflow/render/: __init__.py  html.py  markdown.py
src/adversaryflow/retrieval/: allowlist.py  attack_catalog.py  citations.py  (+2 more)
tests/: test_adaptation.py  test_allowlist.py  test_attack_catalog.py  test_citations_factuality.py  test_cli.py  test_distribution.py  test_html_render.py  test_node_runner.py  test_orchestrator.py  test_safety.py  test_schemas.py  test_search_provider.py  test_source_extractor.py  test_storage.py  test_url_validator.py
tests/fixtures/: mini-attack.json
(+7 files in other folders)
