[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "adversaryflow"
version = "0.2.1"
description = "Threat-informed, safety-constrained red team scenario generator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "AdversaryFlow Contributors"}]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<15",
  "jinja2>=3.1,<4",
  "pypdf>=5,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
]

[project.scripts]
adversaryflow = "adversaryflow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/adversaryflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
